[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "advent-2023"
doctest = false
bench = false
doc = false

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
glam = "0.24"
inventory = "0.3"
reqwest = { version = "0.11", features = ["cookies"] }
rustc-hash = "1.1.0"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
